// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mobile-item.vue Snapshot for mobile-item component with data  1`] = `
<div
  class="scrollable--issue alert--success"
>
  <p
    class="mt0 mb0"
  >
    Has a \`
    <meta
      name="viewport"
    />
    \` tag with \`width\` or \`initial-scale\`
  </p>
</div>
`;

exports[`mobile-item.vue Snapshot for mobile-item component without data 1`] = `
<div
  class="scrollable--issue alert--danger"
>
  <p
    class="mt0 mb0"
  >
    Has a \`
    <meta
      name="viewport"
    />
    \` tag with \`width\` or \`initial-scale\`
  </p>
</div>
`;
